added languages part 2

--- a/components/com_recruit/views/languages/tmpl/default.xml
+++ b/components/com_recruit/views/languages/tmpl/default.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <metadata>
-	<layout title="Типы заявок">
-		<message>Типы заявок описание</message>
+	<layout title="Языки">
+		<message>Языки описание</message>
 	</layout>
 </metadata>
